--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jschessengine",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +21,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
-  }
+  },
+  "description": ""
 }
